--- a/style.css
+++ b/style.css
@@ -8,3 +8,45 @@
     flex-direction: column;
     font-size: 18px;
 }
+body {
+    background-image: url("The_Pit.png");
+    background-size: cover;        /* cobre a tela inteira */
+    background-position: center;   /* centraliza */
+    background-repeat: no-repeat;  /* não repete */
+    background-attachment: fixed;  /* efeito fixo */
+}
+
+
+.form-label{
+    color: #ffffff; /* cor do texto */
+    text-shadow: 
+        -1px -1px 0 #000,
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000;
+}
+
+#list{
+     color: #ffffff; /* cor do texto */
+    text-shadow: 
+        -1px -1px 0 #d4af37,
+         1px -1px 0 #d4af37,
+        -1px  1px 0 #d4af37,
+         1px  1px 0 #d4af37;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.box-container {
+    background-color: rgb(0, 0, 0);
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 500px;
+}
